# kigo-gui-framework-2.5

./: pyproject.toml  readme.txt
kigo/: app.py
